Integrate dynamic product filtering, pagination, and enhanced image handling across frontend and backend
Refactored `Home` component to dynamically render filtered products and handle pagination. Integrated Zustand state management for product filtering. Enhanced `ImageController` and `ImageService` to support multiple image uploads. Updated related tests to cover added functionalities. Introduced `SearchBar` component for filtering products by name, description, and category. Simplified `ProductStore` and `ProductImage` handling for improved maintainability.